--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "backend for the bookify bookings management system.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon index.js"
   },
   "author": "",
   "license": "ISC",
@@ -16,6 +17,7 @@
     "express": "^4.21.0",
     "jsonwebtoken": "^9.0.2",
     "mocha": "^10.7.3",
+    "mongodb": "^6.9.0",
     "mongoose": "^8.6.2",
     "nodemon": "^3.1.4",
     "supertest": "^7.0.0"
