--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -4,7 +4,7 @@ on: [pull_request]
 
 jobs:
     tests:
-        runs-on: ubuntu@latest
+        runs-on: ubuntu-latest
 
         env:
             NODE_ENV: test
