--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,6 +20,7 @@ jobs:
             - name: checkout and run tests
               uses: actions/checkout@v4
             - run: npm i
+            - run: npm start
             - run: npm test
 
 
