--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -5,6 +5,7 @@ on: [pull_request]
 jobs:
     tests:
         runs-on: ubuntu-latest
+        timeout-minutes: 3
 
         env:
             NODE_ENV: test
