--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "backend for the bookify bookings management system.",
   "main": "index.js",
   "scripts": {
-    "test": "mocha --timeout 10000 ./tests/*.js",
+    "test": "mocha ./tests/*.js",
     "start": "nodemon index.js"
   },
   "author": "",
