--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,6 +21,9 @@ jobs:
               uses: actions/checkout@v4
             - run: npm i
             - run: npm test
+              env:
+                  CI: true
+                  MONGO_DB_CONNSTR: ${{ vars.MONGO_DB_CONNSTR }}
 
 
 
