--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,6 +24,7 @@ jobs:
               env:
                   CI: true
                   MONGO_DB_CONNSTR: ${{ vars.MONGO_DB_CONNSTR }}
+            - run: kill $(jobs -p)
 
 
 
